2012-10-03  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSFormat.m: for C-string formatting, avoid reading to the
        nul terminator ... limit to a number of bytes equal to the precision
        (if any) given in the format. This may be the wrong thing to do when
        handling multibyte encodings (where a natural expectation is to have
        precision mean number of characters), but seems legitimate going by
        current xopen printf documentation.

2012-10-03  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* SSL/GSSSLHandle.m (-sslSetOptions): Apply string name change
	missed during TLS reorganisation.

2012-09-30  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSSocketStream.m:
        * Source/GSTLS.m:
        * Source/GSHTTPURLHandle.m:
        * Source/NSURLProtocol.m:
        * Headers/Foundation/NSFileHandle.h:
        Add GNUstep TLS/SSL options when loading HTTPS URLs.

2012-09-26  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSUserDefaults.m: Fix error synchronising from changes in
        database ... was not sending the notification to say we had updated.
        * Headers/Foundation/NSFileHandle.h:
        * Source/GSSocketStream.m:
        * Source/GSTLS.h:
        * Source/GSTLS.m:
        * Source/NSFileHandle.m:
        More TLS reorganisation and adding diagnostics

2012-09-25  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GNUmakefile:
        * Source/GSSocketStream.m:
        * Source/NSFileHandle.m:
        * Headers/Foundation/NSFileHandle.h:
        * SSL/GSSSLHandle.m:
        * Source/GSTLS.h:
        * Source/GSTLS.m:
        Restructure to separate some of the tls functionality out.

2012-09-24  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSBundle.m: Fix error spotted by Fred.

2012-09-24  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/Foundation/NSFileHandle.h: deprecate old method for setting
        certificate and add new one.